--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,29 @@ body {
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
 }
+.container {
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
 
 h2,
 h3 {
   color: var(--title-text-color);
+  margin-top: 0;
+  margin-bottom: 0;
+}
+h2,
+h3,
+p,
+ul {
+  margin-left: 0;
+  margin-right: 0;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 header {
   background-color: #ececec;
@@ -67,14 +86,16 @@ a {
 }
 
 .hero {
+  margin-top: 0;
+  margin-bottom: 30px;
   background: #2f303a;
+  text-align: center;
 }
 .hero-title {
   color: var(--primary-white-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
@@ -84,17 +105,17 @@ a {
   font-size: 16px;
   line-height: 1.88;
   align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   cursor: pointer;
-  border: 0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding: 10px 32px;
+  min-width: 216px;
 }
 .button:active {
   background-color: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
 }
 
 .fearures,
