--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 .container {
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
@@ -20,8 +20,6 @@ body {
 h2,
 h3 {
   color: var(--title-text-color);
-  margin-top: 0;
-  margin-bottom: 0;
 }
 h2,
 h3,
@@ -29,15 +27,24 @@ p,
 ul {
   margin-left: 0;
   margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+img {
+  display: block;
+  min-width: 100%;
+  height: auto;
+}
 header {
   background-color: #ececec;
-  align-items: center;
   border-bottom: 1px solid #ececec;
+}
+.header-page {
+  display: flex;
 }
 
 .menu-nav {
@@ -45,11 +52,20 @@ header {
 }
 .site-nav {
   display: flex;
+  margin-left: 93px;
+  margin-right: 344px;
+  margin-top: 32px;
+  margin-bottom: 32px;
 }
 .site-nav .item {
-  margin-left: 50px;
+  margin-right: 50px;
 }
-
+.site-nav .item:last-child {
+  margin-right: 0;
+}
+.site-nav .item:first-child {
+  margin-left: 0;
+}
 .logo,
 .accent {
   color: #000;
@@ -60,25 +76,24 @@ header {
   letter-spacing: 0.03em;
   text-decoration: none;
 }
-.logo {
-  margin-right: 0;
-}
+
 .accent {
   color: var(--accent-color);
 }
 ul {
   list-style: none;
+  padding-left: 0;
 }
 .menu-nav {
   align-items: center;
 }
+
 .site-nav a {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  text-decoration: none;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -105,19 +120,24 @@ a {
   color: var(--accent-color);
 }
 
-.email-tel {
-  display: flex;
-  margin-right: 0;
-}
 .email .link {
   margin-right: 50px;
-  margin-left: 718px;
 }
+.contact-data {
+  display: flex;
+  margin-right: 0;
+  margin-left: 0;
+  align-items: center;
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
 .hero {
   margin-top: 0;
   margin-bottom: 30px;
   background: #2f303a;
   text-align: center;
+  display: flex;
 }
 .hero-title {
   color: var(--primary-white-color);
@@ -126,6 +146,8 @@ a {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  margin-bottom: 30px;
+  margin-top: 200px;
 }
 .button {
   font-family: inherit;
@@ -141,6 +163,7 @@ a {
   border-radius: 4px;
   padding: 10px 32px;
   min-width: 216px;
+  margin-bottom: 200px;
 }
 .button:active {
   background-color: #188ce8;
@@ -152,6 +175,7 @@ a {
 }
 .fearure-list {
   display: flex;
+  padding-left: 0;
 }
 .fearure-list .item {
   width: 270px;
@@ -162,7 +186,7 @@ a {
   margin-left: 0;
 }
 .fearure-list .item:last-child {
-  margin-left: 0;
+  margin-right: 0;
 }
 
 .fearures-title {
@@ -175,6 +199,7 @@ a {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  margin-top: 10px;
 }
 .section-title {
   font-size: 36px;
@@ -192,6 +217,14 @@ a {
   margin-right: 15px;
   margin-top: 50px;
 }
+.work-list .item:first-child,
+.team-list .item:first-child {
+  margin-left: 0;
+}
+.work-list .item:last-child,
+.team-list .item:last-child {
+  margin-right: 0;
+}
 
 .team-name {
   font-weight: 500;
@@ -199,20 +232,30 @@ a {
   line-height: 1.18x;
   letter-spacing: 0.03em;
   text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 .team-speciality {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   text-align: center;
+  margin-bottom: 30px;
 }
 footer {
   background-color: #2f303a;
 }
+.footer-logo {
+  padding-top: 60px;
+}
+
 .logo-studio {
   color: var(--primary-white-color);
 }
-
+address {
+  margin-top: 20px;
+  padding-bottom: 60px;
+}
 address,
 .address-email,
 .address-tel {
@@ -227,6 +270,10 @@ address,
 .address-tel {
   color: rgba(255, 255, 255, 0.6);
 }
+.address-email {
+  margin-top: 9px;
+  margin-bottom: 9px;
+}
 
 /* Портфоліо */
 
@@ -235,7 +282,14 @@ main {
 }
 .filters {
   background-color: #f5f4fa;
+  display: flex;
 }
+.menu-filters {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 34px;
+}
+
 .filters-button {
   font-family: inherit;
   cursor: pointer;
@@ -246,17 +300,39 @@ main {
   text-align: center;
   letter-spacing: 0.03em;
   border: 0;
+  margin-right: 8px;
+  padding: 6px 22px;
+  margin-bottom: 22px;
+}
+.filters-button:last-child {
+  margin-right: 0;
 }
 .filters-button:hover,
 .filters-button:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
 }
+.project-set {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-right: -30px;
+}
+.project-set > .project {
+  border-bottom: 1px solid #eeeeee;
+  flex-basis: calc(100% / 3 - 30px);
+  margin-top: 30px;
+  margin-left: 30px;
+}
+.project-content {
+  margin: 20px 24px;
+}
 
 .project-title {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 .project-description {
   font-size: 16px;
