--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ h2,
 h3 {
   color: var(--title-text-color);
 }
+h1,
 h2,
 h3,
 p,
@@ -30,7 +31,7 @@ ul {
   margin-top: 0;
   margin-bottom: 0;
 }
-.section {
+section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -40,8 +41,10 @@ img {
   height: auto;
 }
 header {
-  background-color: #ececec;
+  background-color: #fff;
   border-bottom: 1px solid #ececec;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .header-page {
   display: flex;
@@ -49,13 +52,11 @@ header {
 
 .menu-nav {
   display: flex;
+  align-items: center;
 }
 .site-nav {
   display: flex;
   margin-left: 93px;
-  margin-right: 344px;
-  margin-top: 32px;
-  margin-bottom: 32px;
 }
 .site-nav .item {
   margin-right: 50px;
@@ -63,9 +64,7 @@ header {
 .site-nav .item:last-child {
   margin-right: 0;
 }
-.site-nav .item:first-child {
-  margin-left: 0;
-}
+
 .logo,
 .accent {
   color: #000;
@@ -83,9 +82,6 @@ header {
 ul {
   list-style: none;
   padding-left: 0;
-}
-.menu-nav {
-  align-items: center;
 }
 
 .site-nav a {
@@ -128,16 +124,15 @@ a {
   margin-right: 0;
   margin-left: 0;
   align-items: center;
-  margin-top: 32px;
-  margin-bottom: 32px;
+  margin-left: auto;
 }
 
 .hero {
-  margin-top: 0;
-  margin-bottom: 30px;
   background: #2f303a;
   text-align: center;
   display: flex;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .hero-title {
   color: var(--primary-white-color);
@@ -146,8 +141,12 @@ a {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  margin-bottom: 30px;
-  margin-top: 200px;
+  max-width: 696px;
+  margin-left: auto;
+  margin-right: auto;
+
+  text-align: center;
+  padding-bottom: 30px;
 }
 .button {
   font-family: inherit;
@@ -163,13 +162,13 @@ a {
   border-radius: 4px;
   padding: 10px 32px;
   min-width: 216px;
-  margin-bottom: 200px;
 }
 .button:active {
   background-color: #188ce8;
 }
-
-.fearures,
+.fearure {
+  background-color: #fff;
+}
 .work {
   background-color: #f5f5f5;
 }
@@ -207,15 +206,18 @@ a {
   text-align: center;
   letter-spacing: 0.03em;
 }
+.work {
+  padding-top: 0;
+}
 .work-list,
 .team-list {
   display: flex;
+  margin-top: 50px;
 }
 .work-list .item,
 .team-list .item {
   margin-left: 15px;
   margin-right: 15px;
-  margin-top: 50px;
 }
 .work-list .item:first-child,
 .team-list .item:first-child {
@@ -229,24 +231,25 @@ a {
 .team-name {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.18x;
+  line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
-  margin-top: 30px;
-  margin-bottom: 10px;
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 .team-speciality {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   text-align: center;
-  margin-bottom: 30px;
+}
+.team-person {
+  padding: 30px 70px;
 }
 footer {
   background-color: #2f303a;
-}
-.footer-logo {
   padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .logo-studio {
@@ -254,7 +257,6 @@ footer {
 }
 address {
   margin-top: 20px;
-  padding-bottom: 60px;
 }
 address,
 .address-email,
@@ -278,16 +280,20 @@ address,
 /* Портфоліо */
 
 main {
-  background-color: #eeeeee;
+  background-color: #fff;
 }
 .filters {
-  background-color: #f5f4fa;
+  background-color: #fff;
   display: flex;
 }
 .menu-filters {
   display: flex;
   justify-content: center;
-  margin-bottom: 34px;
+  padding-bottom: 50px;
+}
+
+.filters-item {
+  margin-right: 8px;
 }
 
 .filters-button {
@@ -300,11 +306,11 @@ main {
   text-align: center;
   letter-spacing: 0.03em;
   border: 0;
-  margin-right: 8px;
   padding: 6px 22px;
-  margin-bottom: 22px;
+  background: #f5f4fa;
+  border-radius: 4px;
 }
-.filters-button:last-child {
+.filters-item:last-child {
   margin-right: 0;
 }
 .filters-button:hover,
@@ -315,24 +321,25 @@ main {
 .project-set {
   display: flex;
   flex-wrap: wrap;
-  margin-top: -30px;
-  margin-right: -30px;
+  margin-top: -36px;
+  margin-left: -36px;
 }
 .project-set > .project {
-  border-bottom: 1px solid #eeeeee;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
   flex-basis: calc(100% / 3 - 30px);
   margin-top: 30px;
   margin-left: 30px;
 }
 .project-content {
-  margin: 20px 24px;
+  padding: 20px 24px;
 }
 
 .project-title {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  margin-bottom: 4px;
+  padding-bottom: 4px;
 }
 .project-description {
   font-size: 16px;
